# process-stats

./: .gitignore  CMakeLists.txt  README.md  flake.nix
nix/: build.nix  default.nix  include.nix  lib.nix  tests.nix
src/: CMakeLists.txt  process_stats.cpp  process_stats.h
tests/: CMakeLists.txt  test_process_stats.cpp
